# parquet_info

./: .gitignore  BaseDWH.parquet  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  parquet_info.cmd  parquet_info.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: GITHUB_SETUP.md  RELEASE.md
examples/: demo_inventory.parquet
scripts/: generate_demo_parquet.py  generate_readme_assets.py
tests/: test_cli.py
